fix popup z-index

--- a/src/app/components/popup/popup.module.css
+++ b/src/app/components/popup/popup.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    z-index: 100;
+    z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
